--- a/SoundRecord/app/src/main/res/layout/activity_recording.xml
+++ b/SoundRecord/app/src/main/res/layout/activity_recording.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".RecordingActivity">
 
+    <Switch
+        android:id="@+id/record_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Switch"
+        tools:layout_editor_absoluteX="165dp"
+        tools:layout_editor_absoluteY="272dp" />
 </android.support.constraint.ConstraintLayout>
