--- a/SoundRecord/app/src/main/res/drawable/button_record.xml
+++ b/SoundRecord/app/src/main/res/drawable/button_record.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="200px"
-    android:layout_width="200px">
+<selector xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="200px" android:layout_width="200px">
     <item android:drawable = "@drawable/stop_embossed"
         android:state_checked="true"/>
     <item android:drawable="@drawable/record_embossed"
