--- a/SoundRecord/app/src/main/res/layout/activity_recording.xml
+++ b/SoundRecord/app/src/main/res/layout/activity_recording.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#abcdef"
     tools:context=".RecordingActivity">
 
     <ToggleButton
@@ -12,19 +13,17 @@
         android:layout_height="261dp"
         android:layout_marginStart="90dp"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="90dp"
         android:layout_marginRight="90dp"
-        android:layout_marginBottom="300dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/button_record"
         android:checked="false"
         android:text=""
         android:textOff=""
-        android:textOn="Recording"
+        android:textOn="@string/recording"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
