--- a/SoundRecord/app/src/main/res/layout/activity_maps.xml
+++ b/SoundRecord/app/src/main/res/layout/activity_maps.xml
@@ -24,17 +24,19 @@
         android:id="@+id/btnBegin"
         android:layout_width="110dp"
         android:layout_height="55dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@android:color/holo_blue_light"
         android:baselineAligned="false"
         android:onClick="openRecordingPage"
         android:text="BEGIN"
         android:textColor="@android:color/white"
         android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/map" />
+        app:layout_constraintTop_toBottomOf="@+id/map"
+        app:layout_constraintVertical_bias="0.502" />
 
 
 </android.support.constraint.ConstraintLayout>
