--- a/SoundRecord/app/src/main/res/layout/content_home.xml
+++ b/SoundRecord/app/src/main/res/layout/content_home.xml
@@ -84,6 +84,27 @@
         app:layout_constraintStart_toEndOf="@+id/footballBtn"
         app:layout_constraintTop_toBottomOf="@+id/text" />
 
+    <Button
+        android:id="@+id/concreteBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="148dp"
+        android:background="@android:color/holo_blue_light"
+        android:text="@string/ConcreteCalibration"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintVertical_bias="1.0" />
+
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
