--- a/SoundRecord/app/src/main/res/layout/content_results.xml
+++ b/SoundRecord/app/src/main/res/layout/content_results.xml
@@ -177,9 +177,9 @@
         android:id="@+id/next_drop_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
@@ -188,36 +188,34 @@
         android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/redo_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/concreteResultBtn" />
+        app:layout_constraintEnd_toStartOf="@+id/finish_btn"
+        app:layout_constraintHorizontal_bias="0.409"
+        app:layout_constraintStart_toEndOf="@+id/redo_btn"
+        app:layout_constraintTop_toBottomOf="@+id/concreteResultBtn"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/redo_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/holo_blue_light"
         android:text="@string/redo"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/finish_btn"
-        app:layout_constraintStart_toEndOf="@+id/next_drop_btn"
-        app:layout_constraintTop_toBottomOf="@+id/concreteResultBtn" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/concreteResultBtn"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/finish_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
@@ -227,8 +225,8 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/redo_btn"
-        app:layout_constraintTop_toBottomOf="@+id/concreteResultBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/concreteResultBtn"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -277,23 +275,23 @@
 
     <Button
         android:id="@+id/concreteResultBtn"
-        android:layout_width="353dp"
+        android:layout_width="0dp"
         android:layout_height="49dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="100dp"
-        android:text="Button"
+        android:layout_marginBottom="16dp"
         android:background="@android:color/holo_blue_light"
+        android:text="Button"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.73"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
+        app:layout_constraintVertical_bias="0.110000014" />
 
 
 </android.support.constraint.ConstraintLayout>
